ping/pingfederate/output.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    role: pingfederate
  name: pf-cluster
spec:
  clusterIP: None
  ports:
  - name: bind-port
    port: 7600
    protocol: TCP
    targetPort: 7600
  publishNotReadyAddresses: true
  selector:
    role: pingfederate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingfederate
    tier: engine
  name: pingfederate
spec:
  ports:
  - name: https
    port: 9031
  selector:
    role: pingfederate
    tier: engine
---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingfederate
    tier: console
  name: pingfederate-admin
spec:
  ports:
  - name: pf-console
    port: 9999
  selector:
    role: pingfederate
    tier: console
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingfederate
    tier: engine
  name: pingfederate
spec:
  replicas: 2
  selector:
    matchLabels:
      role: pingfederate
      tier: engine
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        role: pingfederate
        tier: engine
        version: "0.1"
      name: pingfederate
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingfederate-engine-environment-variables
        - secretRef:
            name: devops-secret
            optional: true
        image: pingidentity/pingfederate:edge
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - sleep 20
        name: pingfederate
        ports:
        - containerPort: 9031
        readinessProbe:
          httpGet:
            path: /pf/heartbeat.ping
            port: 9031
            scheme: HTTPS
          periodSeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
          requests:
            cpu: "1"
            memory: 1.5Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingfederate
    tier: console
  name: pingfederate-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingfederate
      tier: console
  template:
    metadata:
      labels:
        role: pingfederate
        tier: console
      name: pingfederate-admin
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingfederate-admin-environment-variables
        - secretRef:
            name: devops-secret
            optional: true
        image: pingidentity/pingfederate:edge
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /pingfederate/app
            port: 9999
            scheme: HTTPS
          initialDelaySeconds: 100
          periodSeconds: 1
        name: pingfederate-admin
        ports:
        - containerPort: 9999
        - containerPort: 7600
        readinessProbe:
          httpGet:
            path: /pingfederate/app
            port: 9999
            scheme: HTTPS
          periodSeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
          requests:
            cpu: "1"
            memory: 1.5Gi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingfederate
    tier: engine
  name: pingfederate
spec:
  rules:
  - host: pingfederate.samir.ping-devops.com
    http:
      paths:
      - backend:
          serviceName: pingfederate
          servicePort: 9031
        path: /
  tls:
  - hosts:
    - pingfederate.samir.ping-devops.com
    secretName: tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingfederate
    tier: admin
  name: pingfederate-admin
spec:
  rules:
  - host: pingfederate-admin.samir.ping-devops.com
    http:
      paths:
      - backend:
          serviceName: pingfederate-admin
          servicePort: 9999
        path: /pingfederate
      - backend:
          serviceName: pingfederate-admin
          servicePort: 9999
        path: /pf-admin-api
  tls:
  - hosts:
    - pingfederate-admin.samir.ping-devops.com
    secretName: tls-secret
